--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
             </div> <!-- /.footer__inner -->
 
             <div class="copyright">
-                © 2016 MoGo free PSD template by <span>Laaqiq</span>
+                © 2020 template by <span>Gogo</span>
             </div>
 
         </div> <!-- /.container -->
