--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header class="header" id="header">
     <div class="container">
         <div class="header__inner">
-            <div class="Header__logo" data-scroll="#intro">Nikko</div>
+            <div class="Header__logo" data-scroll="#intro">Gogo</div>
             <nav class="nav" id="nav">
              <a class="nav__link" href="#" data-scroll="#about">About</a>   
              <a class="nav__link" href="#" data-scroll="#services">Servises</a>   
@@ -777,7 +777,7 @@
                             <img class="blogs__img" src="assets/images/blog/3.jpg" alt="">
                             <div class="blogs__content">
                                 <a class="blogs__title" href="#">Lorem ipsum dolor sit amet, consectetur adipiscing</a>
-                                <div class="blogs__date">Jan 9, 2016</div>
+                                <div class="blogs__date">Jan 9, 2020</div>
                             </div>
                         </div>
                     </div> <!-- /.blogs -->
